style.css
/* ... */
.progress-line.python span::after{
  content: "100%";
}

.progress-line.web span::after{
  content: "70%";
}
.progress-line.sql span::after{
  content: "80%";
}
.progress-line.c span::after{
  content: "60%";
}
.progress-line.java span::after{
  content: "60%";
}

.progress-line span before{
  content: "";
  position: absolute;
  width: 0;
  height: 0;
  border: 7px solid trasparent;
  border-bottom-width: 0px;
  border-right-width: 0px;
  border-top-color: #000;
  top:-10px;
  right: 0;
  animation: showText 0.5s 1.5s linear forwards;
  opacity: 0;
}

@keyframes showText{
  100%{
    opacity: 1;
  }
}

.radial-bars{
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: flex-start;
}

@media (max-width: 703px) and (min-width: 475px) {
  .radial-bars{
    width: 120%;
  }
}

.radial-bars .radial-bar{
  width: 50%;
  height: 170px;
  margin-bottom: 5px;
  position: relative;
}

.radial-bars .radial-bar svg{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) rotate(-90deg);
  width: 120px;
  height: 160px;
}
.radial-bars .radial-bar .progress-bar{
  stroke-width: 10;
  stroke: black;
  fill: transparent;
  stroke-dasharray: 502;
  stroke-dashoffset: 502;
  stroke-linecap: round;
  animation: animate-bar 1s linear forwards;
}

@keyframes animate-bar{
  100%{
    stroke-dashoffset: -1;
  }
}

.timeline-section {
  max-width: 900px;
  margin: 30px auto;
  padding: 20px;
  border-radius: 15px;
}

.timeline-section h2 {
  color: #f5f5dc;
  text-align: center;
  margin-bottom: 30px;
}

.timeline {
  position: relative;
  padding: 20px 0;
}

.timeline::before {
  visibility: hidden;
  content: '';
  position: absolute;
  width: 2px;
  height: 100%;
  background: #0ef;
  left: 50%;
  transform: translateX(-50%);
}

.timeline-item {
  width: 100%;
  margin-bottom: 40px;
}

.timeline-item:nth-child(odd) {
  float: right;
  padding-left: 50px;
}

.timeline-item:nth-child(even) {
  float: left;
  padding-right: 50px;
  text-align: right;
}

.timeline-content {
  
  padding: 20px;
  border-radius: 10px;
  position: relative;
}

.timeline-content::after {
  content: '';
  position: absolute;
  width: 20px;
  height: 20px;
  background: #0ef;
  border-radius: 50%;
  top: 20px;
}

.timeline-item:nth-child(odd) .timeline-content::after {
  left: -60px;
}

.timeline-item:nth-child(even) .timeline-content::after {
  right: -60px;
}

.timeline-content h3 {
  color: #0ef;
  margin-bottom: 10px;
}

.timeline-content p {
  color: black;
  font-weight: 500;
  color: #f5f5dc;
  text-shadow: 0 0 2px rgba(255, 255, 255, 0.2); /* Add white glow */
}

@media (max-width: 768px) {
  .timeline-section {
    padding: 10px;
  }

  .timeline::before {
    left: -13px;
    visibility: visible;
  }
  
  .timeline-item {
    width: 100%;
    padding-left: 45px;
    padding-right: 0;
    margin-bottom: 30px;
  }
  
  .timeline-item:nth-child(odd) {
    text-align: left;
    float: none;
  }
  
  .timeline-item:nth-child(even) {
    float: none;
    padding-left: 45px;
  }
  
  .timeline-content {
    left: -30px;
    padding: 15px;
  }

  .timeline-content::after {
    left: -35px !important;
    right: auto !important;
    width: 15px;
    height: 15px;
  }

  .timeline-item:nth-child(odd) .timeline-content::after{
    left: -40px !important;
  }

  .timeline-content h3 {
    font-size: 18px;
  }

  .timeline-content p {
    font-size: 14px;
  }
}

.path{
  stroke-width: 10;
  stroke: #0ef;
  fill: transparent;
  stroke-dasharray: 502;
  stroke-dashoffset: 502;
  stroke-linecap: round;
}
.path-1{animation: animate-path1 1s linear forwards;}
.path-2{animation: animate-path2 1s linear forwards;}
.path-3{animation: animate-path3 1s linear forwards;}
.path-4{animation: animate-path4 1s linear forwards;}

@keyframes animate-path1{
  100%{
    stroke-dashoffset: 150;
  }
}

@keyframes animate-path2{
  100%{
    stroke-dashoffset: 75;
  }
}
@keyframes animate-path3{
  100%{
    stroke-dashoffset: 50;
  }
}
@keyframes animate-path4{
  100%{
    stroke-dashoffset: 50;
  }
}

.radial-bar .percentage{
  color: #fff;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 17px;
  font-weight: 500;
  animation: showText 0.5s 1s linear forwards;
  opacity: 0;
}
.progress-bar .text{
  width: 100%;
  position: absolute;
  text-align: center;
  left: 50%;
  bottom: -5px;
  transform: translateX(-50%);
  font-size: 17px;
  font-weight: 500;
  animation: showText 0.5s 1s linear forwards;
  opacity: 0;
}

